--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,18 @@
 ::selection {
   background: #FF5E99;
 }
+
+header {
+  -webkit-app-region: drag; 
+  -webkit-user-select: none; 
+}
+
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+
 body {
   font-size: 11pt;
   font-family: Inconsolata, monospace;
@@ -13,24 +20,29 @@ body {
   background-color: black;
 }
 
+#title-bar-btns {
+  -webkit-app-region: no-drag;
+  position: fixed;
+  top: 0px;
+  right: 6px;
+  color: black;
+}
+
 #shell {
   display:true;
 }
 
 body .ui-autocomplete {
-  /* font-family to all */
-    background: black;
-    color: white;
+  background: black;
+  color: white;
 }
 
 body .ui-autocomplete .ui-menu-item .ui-corner-all {
-   /* all <a> */
-    background: black;
+  background: black;
 }
 
 body .ui-autocomplete .ui-menu-item .ui-state-focus {
-   /* selected <a> */
-    background: black;
+  background: black;
 }
 
 #output-container {
